workspace = { members = ["hello", "bye"] }

[package]
name = "belajar-rust-crate"
version = "0.1.0"
edition = "2021"

[dependencies]
learn-rust-say-hello = { version = "=0.3.0", features = ["all"] }
bye = { path = "./bye" }
hello = { path = "./hello" }

[dev-dependencies]
uuid = { version = "1.11.0", features = ["v4"] }
